# telseq

src/: autogen.sh  config.h  configure.ac
src/Telseq/: telseq.cpp  telseq.h
